crates/cadtab-core/src/snapshots/cadtab_core__eval__event_eval_tests__index_and_spread_snapshot.snap
---
source: crates/cadtab-core/src/eval.rs
expression: phrase
---
Phrase {
    events: [
        Event {
            kind: Note(
                Note {
                    pos: Position {
                        string: 3,
                        fret: 0,
                    },
                    dur: Duration {
                        num: 1,
                        den: 8,
                    },
                    right_hand: Some(
                        Finger(
                            Thumb,
                        ),
                    ),
                    technique: None,
                    tie: false,
                },
            ),
            span: Span {
                start: 26,
                end: 36,
            },
            chord: None,
        },
        Event {
            kind: Note(
                Note {
                    pos: Position {
                        string: 2,
                        fret: 0,
                    },
                    dur: Duration {
                        num: 1,
                        den: 8,
                    },
                    right_hand: Some(
                        Finger(
                            Index,
                        ),
                    ),
                    technique: None,
                    tie: false,
                },
            ),
            span: Span {
                start: 38,
                end: 48,
            },
            chord: None,
        },
        Event {
            kind: Note(
                Note {
                    pos: Position {
                        string: 1,
                        fret: 0,
                    },
                    dur: Duration {
                        num: 1,
                        den: 8,
                    },
                    right_hand: Some(
                        Finger(
                            Middle,
                        ),
                    ),
                    technique: None,
                    tie: false,
                },
            ),
            span: Span {
                start: 50,
                end: 60,
            },
            chord: None,
        },
        Event {
            kind: Note(
                Note {
                    pos: Position {
                        string: 3,
                        fret: 0,
                    },
                    dur: Duration {
                        num: 1,
                        den: 8,
                    },
                    right_hand: Some(
                        Finger(
                            Thumb,
                        ),
                    ),
                    technique: None,
                    tie: false,
                },
            ),
            span: Span {
                start: 26,
                end: 36,
            },
            chord: None,
        },
        Event {
            kind: Note(
                Note {
                    pos: Position {
                        string: 2,
                        fret: 0,
                    },
                    dur: Duration {
                        num: 1,
                        den: 8,
                    },
                    right_hand: Some(
                        Finger(
                            Index,
                        ),
                    ),
                    technique: None,
                    tie: false,
                },
            ),
            span: Span {
                start: 38,
                end: 48,
            },
            chord: None,
        },
        Event {
            kind: Note(
                Note {
                    pos: Position {
                        string: 1,
                        fret: 0,
                    },
                    dur: Duration {
                        num: 1,
                        den: 8,
                    },
                    right_hand: Some(
                        Finger(
                            Middle,
                        ),
                    ),
                    technique: None,
                    tie: false,
                },
            ),
            span: Span {
                start: 50,
                end: 60,
            },
            chord: None,
        },
        Event {
            kind: Note(
                Note {
                    pos: Position {
                        string: 3,
                        fret: 0,
                    },
                    dur: Duration {
                        num: 1,
                        den: 8,
                    },
                    right_hand: Some(
                        Finger(
                            Thumb,
                        ),
                    ),
                    technique: None,
                    tie: false,
                },
            ),
            span: Span {
                start: 26,
                end: 36,
            },
            chord: None,
        },
        Event {
            kind: Note(
                Note {
                    pos: Position {
                        string: 2,
                        fret: 0,
                    },
                    dur: Duration {
                        num: 1,
                        den: 8,
                    },
                    right_hand: Some(
                        Finger(
                            Index,
                        ),
                    ),
                    technique: None,
                    tie: false,
                },
            ),
            span: Span {
                start: 38,
                end: 48,
            },
            chord: None,
        },
        Event {
            kind: Note(
                Note {
                    pos: Position {
                        string: 1,
                        fret: 0,
                    },
                    dur: Duration {
                        num: 1,
                        den: 8,
                    },
                    right_hand: Some(
                        Finger(
                            Middle,
                        ),
                    ),
                    technique: None,
                    tie: false,
                },
            ),
            span: Span {
                start: 50,
                end: 60,
            },
            chord: None,
        },
    ],
}
