crates/cadtab-core/src/snapshots/cadtab_core__eval__event_eval_tests__loop_unroll_snapshot.snap
---
source: crates/cadtab-core/src/eval.rs
expression: phrase
---
Phrase {
    events: [
        Event {
            kind: Note(
                Note {
                    pos: Position {
                        string: 3,
                        fret: 2,
                    },
                    dur: Duration {
                        num: 1,
                        den: 8,
                    },
                    right_hand: Some(
                        Finger(
                            Thumb,
                        ),
                    ),
                    technique: None,
                    tie: false,
                },
            ),
            span: Span {
                start: 30,
                end: 35,
            },
            chord: None,
        },
        Event {
            kind: Note(
                Note {
                    pos: Position {
                        string: 3,
                        fret: 4,
                    },
                    dur: Duration {
                        num: 1,
                        den: 8,
                    },
                    right_hand: None,
                    technique: None,
                    tie: false,
                },
            ),
            span: Span {
                start: 36,
                end: 39,
            },
            chord: None,
        },
        Event {
            kind: Note(
                Note {
                    pos: Position {
                        string: 3,
                        fret: 2,
                    },
                    dur: Duration {
                        num: 1,
                        den: 8,
                    },
                    right_hand: Some(
                        Finger(
                            Thumb,
                        ),
                    ),
                    technique: None,
                    tie: false,
                },
            ),
            span: Span {
                start: 30,
                end: 35,
            },
            chord: None,
        },
        Event {
            kind: Note(
                Note {
                    pos: Position {
                        string: 3,
                        fret: 4,
                    },
                    dur: Duration {
                        num: 1,
                        den: 8,
                    },
                    right_hand: None,
                    technique: None,
                    tie: false,
                },
            ),
            span: Span {
                start: 36,
                end: 39,
            },
            chord: None,
        },
    ],
}
